<resources>
    <string name="app_name">MyMovieCatalogueAPI</string>
    <string name="tab_text_1">Movies</string>
    <string name="tab_text_2">TV Shows</string>
    <string name="error_info">Error Info</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="locale_setting">Locale Setting</string>
    <string name="indonesia">Indonesian</string>
    <string name="english">English</string>
    <string name="change_language">Change Language</string>
    <string name="movie_title_sample">Judul Movie Populer</string>
    <string name="review">Review</string>
    <string name="genre">Genre</string>
    <string name="overview">Overview</string>
    <string name="cast_desc_sample">Desc Sample 3</string>
    <string name="crew3_desc_sample">Crew Desc Sample 3</string>
    <string name="crew3_sample">Desc Sample 3</string>
    <string name="crew2_desc_sample">Desc Sample 3</string>
    <string name="user_score">User score</string>
    <string name="poster_text_sample">poster_text_sample</string>
    <string name="choice">You choose:</string>
</resources>
